--- a/pts-ui/src/App.css
+++ b/pts-ui/src/App.css
@@ -45,3 +45,21 @@ h1 {
   margin: 0;
   color: #555;
 }
+
+.navbar {
+  display: flex;
+  gap: 1rem;
+  background-color: #0052cc;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+}
