--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            <p>Version 0.0.2</p>
         </div>
     </footer>
 
